--- a/package.json
+++ b/package.json
@@ -9,37 +9,66 @@
   },
   "private": true,
   "dependencies": {
+    "@capacitor/core": "^3.2.5",
+    "@ionic/react": "^5.8.3",
+    "@ionic/react-router": "^5.8.3",
+    "@nxtend/capacitor": "^13.0.0",
+    "@nxtend/ionic-react": "^13.0.0",
+    "@trpc/server": "^9.20.1",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "4.17.2",
+    "ionicons": "^5.5.3",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-native": "0.67.2",
-    "tslib": "^2.0.0"
+    "react-router-dom": "5.3.0",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0",
+    "zod": "^3.12.0"
   },
   "devDependencies": {
+    "@capacitor/android": "^3.2.5",
+    "@capacitor/cli": "^3.2.5",
+    "@capacitor/ios": "^3.2.5",
     "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
     "@nrwl/detox": "13.8.3",
     "@nrwl/eslint-plugin-nx": "13.8.3",
+    "@nrwl/express": "^13.8.3",
     "@nrwl/jest": "13.8.3",
     "@nrwl/linter": "13.8.3",
+    "@nrwl/node": "13.8.3",
+    "@nrwl/react": "^13.0.0",
     "@nrwl/react-native": "13.8.3",
     "@nrwl/tao": "13.8.3",
     "@nrwl/web": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@nxtend/capacitor": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.15.17",
     "@react-native-community/cli": "7.0.1",
     "@react-native-community/cli-platform-android": "7.0.1",
     "@react-native-community/cli-platform-ios": "7.0.1",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/jest-native": "4.0.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
     "@testing-library/react-native": "9.0.0",
+    "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
     "@types/react-native": "0.66.15",
+    "@types/react-router-dom": "5.3.1",
     "@typescript-eslint/eslint-plugin": "~5.10.0",
     "@typescript-eslint/parser": "~5.10.0",
     "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
     "detox": "19.4.5",
     "eslint": "~8.7.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.27.0",
